tests/run-pass/typeck/while.rs
fn main() {
    let a: int = 10;

    while a > 0 {
        a -= 1;
    }
}