tests/compile-fail/semck/call-nonfunction.rs
fn main() {
    1();  //! ERROR(2:5): cannot call non-function
}